# StravaFetcher

./: .gitignore  .rooignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: SETUP.md  SHAREDWORKFLOWS_MIGRATION.md
.github/workflows/: commitlint.yml  create-release.yml  release.yml  tests.yml
docs/: ARCHITECTURE_GUIDE.md  TESTING_STRATEGY.md  VERSION_MANAGEMENT.md
examples/: README.md  config_example.yaml
src/strava_fetcher/: __init__.py  cli.py  client.py  exceptions.py  models.py  persistence.py  pipeline.py  settings.py
tests/: conftest.py  test_settings.py
tests/fixtures/: sample_config.yaml
tests/integration/: __init__.py  test_pipeline.py
tests/unit/: __init__.py  test_exceptions.py  test_persistence.py  test_settings.py
